--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.tianscar.golly"
+        applicationId "com.ansdoship.golly"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 3
-        versionName "0.9.2"
+        versionCode 4
+        versionName "0.9.3"
     }
 
     buildTypes {
