--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Golly"
+        android:isGame="true"
         android:largeHeap="true"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup, UnusedAttribute">
 
         <activity
             android:name="com.ansdoship.golly.activity.MainActivity"
