--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.ansdoship.golly"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 8
-        versionName "0.9.7"
+        versionCode 9
+        versionName "0.9.8-indev"
     }
 
     buildTypes {
