--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:ignore="AllowBackup, UnusedAttribute">
         <activity
             android:name=".activity.MenuActivity"
-            android:label=""
+            android:label="@string/main_menu"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
