--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.ansdoship.golly"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 9
-        versionName "0.9.8-indev"
+        versionCode 10
+        versionName "0.9.9-alpha"
     }
 
     buildTypes {
